# Copyright 2018-2019 the Deno authors. All rights reserved. MIT license.

[package]
name = "deno_cli"
version = "0.26.0"
license = "MIT"
authors = ["the Deno authors"]
edition = "2018"
description = "Provides the deno executable"
repository = "https://github.com/denoland/deno"
default-run = "deno"

[lib]
name = "deno_cli"
path = "lib.rs"

[[bin]]
name = "deno"
path = "main.rs"

[build-dependencies]
deno_typescript = { path = "../deno_typescript", version = "0.26.0" }

[dependencies]
deno = { path = "../core", version = "0.26.0" }
deno_typescript = { path = "../deno_typescript", version = "0.26.0" }

ansi_term = "0.12.1"
atty = "0.2.14"
base64 = "0.22.1"
byteorder = "1.5.0"
clap = "4.5.19"
dirs = "5.0.1"
dlopen = "0.1.8"
futures = { version = "0.3", features = ["compat", "io-compat"] }
http = "1.1.0"
hyper = "1.4.1"
hyper-rustls = "0.27.3"
indexmap = "2.6.0"
lazy_static = "1.5.0"
libc = "0.2.159"
log = "0.4.22"
rand = "0.8.5"
regex = "1.11.0"
remove_dir_all = "0.8.4"
reqwest = { version = "0.12.8", default-features = false, features = [
	"rustls-tls",
] }
ring = "0.17.8"
rustyline = "14.0.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_derive = "1.0.210"
serde_json = { version = "1.0.128", features = ["preserve_order"] }
source-map-mappings = "0.5.0"
sys-info = "0.9.1"
tempfile = "3.13.0"
termcolor = "1.4.1"
tokio = "1.40.0"
tokio-executor = "0.1.10"
tokio-process = "0.2.5"
tokio-rustls = "0.26.0"
url = "2.5.2"
utime = "0.3.1"
webpki = "0.22.4"
webpki-roots = "0.26.6"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"
fwdansi = "1.1.0"

[target.'cfg(unix)'.dependencies]
nix = "0.29.0"

[dev-dependencies]
os_pipe = "1.2.1"
