# Copyright 2018-2019 the Deno authors. All rights reserved. MIT license.

[package]
name = "deno_cli"
version = "0.26.0"
license-file = "LICENSE"
authors = ["the Deno authors"]
edition = "2018"
description = "Provides the deno executable"
repository = "https://github.com/denoland/deno"
default-run = "deno"

[lib]
name = "deno_cli"
path = "lib.rs"

[[bin]]
name = "deno"
path = "main.rs"

[build-dependencies]
deno_typescript = { path = "../deno_typescript", version = "0.26.0" }

[dependencies]
deno = { path = "../core", version = "0.26.0" }
deno_typescript = { path = "../deno_typescript", version = "0.26.0" }

ansi_term = { version = "0.12.1" }
atty = { version = "0.2.13" }
base64 = { version = "0.11.0" }
byteorder = { version = "1.3.2" }
clap = { version = "2.33.0" }
dirs = { version = "2.0.2" }
dlopen = { version = "0.1.8" }
futures = { version = "0.3", features = ["compat", "io-compat"] }
http = { version = "0.1.19" }
hyper = { version = "0.12.35" }
hyper-rustls = "0.17.1"
indexmap = { version = "1.3.0" }
lazy_static = { version = "1.4.0" }
libc = { version = "0.2.65" }
log = { version = "0.4.8" }
rand = { version = "0.7.2" }
regex = { version = "1.3.1" }
remove_dir_all = { version = "0.5.2" }
reqwest = { version = "0.9.22", default-features = false, features = [
	"rustls-tls",
] }
ring = { version = "0.16.9" }
rustyline = { version = "5.0.4" }
serde = { version = "1.0.102", features = ["derive"] }
serde_derive = { version = "1.0.102" }
serde_json = { version = "1.0.41", features = ["preserve_order"] }
source-map-mappings = "0.5.0"
sys-info = "0.5.8"
tempfile = { version = "3.1.0" }
termcolor = { version = "1.0.5" }
tokio = { version = "0.1.22" }
tokio-executor = "0.1.8"
tokio-process = "0.2.4"
tokio-rustls = "0.10.2"
url = { version = "1.7.2" }
utime = { version = "0.2.1" }
webpki = { version = "0.21.0" }
webpki-roots = "0.17.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8" }
fwdansi = { version = "1.0.1" }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.14.1" }

[dev-dependencies]
os_pipe = { version = "0.9.1" }
