[[bin]]
name = "deno"
path = "main.rs"

[build-dependencies]
deno_typescript = { path = "../deno_typescript", version = "0.26.0" }

[dependencies]
ansi_term = { version = "0.12.1" }
atty = { version = "0.2.14" }
base64 = { version = "0.22.1" }
byteorder = { version = "1.5.0" }
clap = { version = "4.5.30" }
deno = { path = "../core", version = "0.26.0" }
deno_typescript = { path = "../deno_typescript", version = "0.26.0" }
dirs = { version = "6.0.0" }
dlopen = { version = "0.1.8" }
futures = { version = "0.3", features = ["compat", "io-compat"] }
http = { version = "1.2.0" }
hyper = { version = "1.6.0" }
hyper-rustls = "0.27.5"
indexmap = { version = "2.7.1" }
lazy_static = { version = "1.5.0" }
libc = { version = "0.2.169" }
log = { version = "0.4.25" }
rand = { version = "0.9.0" }
regex = { version = "1.11.1" }
remove_dir_all = { version = "1.0.0" }
reqwest = { version = "0.12.12", default-features = false, features = [
	"rustls-tls",
] }
ring = { version = "0.17.9" }
rustyline = { version = "15.0.0" }
serde = { version = "1.0.217", features = ["derive"] }
serde_derive = { version = "1.0.217" }
serde_json = { version = "1.0.138", features = ["preserve_order"] }
source-map-mappings = "0.5.0"
sys-info = "0.9.1"
tempfile = { version = "3.17.1" }
termcolor = { version = "1.4.1" }
tokio = { version = "1.43.0" }
tokio-executor = "0.1.10"
tokio-process = "0.2.5"
tokio-rustls = "0.26.1"
url = { version = "2.5.4" }
utime = { version = "0.3.3" }
webpki = { version = "0.22.4" }
webpki-roots = "0.26.8"

[dev-dependencies]
os_pipe = { version = "1.2.1" }

[lib]
name = "deno_cli"
path = "lib.rs"

[package]
authors = ["the Deno authors"]
default-run = "deno"
description = "Provides the deno executable"
edition = "2018"
license-file = "LICENSE"
name = "deno_cli"
repository = "https://github.com/denoland/deno"
version = "0.26.0"

[target]

[target."cfg(unix)"]

[target."cfg(unix)".dependencies]
nix = { version = "0.29.0" }

[target."cfg(windows)"]

[target."cfg(windows)".dependencies]
fwdansi = { version = "1.1.0" }
winapi = { version = "0.3.9" }
