[dependencies]
deno = { path = "../core", version = "0.26.0" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.138" }

[lib]
path = "lib.rs"

[package]
authors = ["the Deno authors"]
description = "To compile TypeScript to a snapshot during build.rs"
edition = "2018"
exclude = [
	"typescript/tests/*",
	"typescript/src/*",
	"typescript/scripts/*",
	"typescript/doc/*",
	"typescript/lib/*/*.json",
]
license-file = "LICENSE"
name = "deno_typescript"
repository = "https://github.com/denoland/deno"
version = "0.26.0"
